# ParcelLocker

./: .gitignore  CMakeLists.txt  README.md
Src/: CMakeLists.txt
Src/Backend/: CMakeLists.txt  DoorController.cpp  DoorController.h  Logger.cpp  Logger.h  MainController.cpp  MainController.h
Src/ParcelLocker/: CMakeLists.txt  CodeEntry.qml  DoorControl.qml  DoorController.cpp  DoorController.h  Header.qml  Logger.cpp  Logger.h  MainController.cpp  Validating.qml  Welcome.qml  main.cpp  main.qml  qml.qrc
Src/ParcelLocker/Resource/: resource.qrc
Src/ParcelLocker/data/: data.qrc  mock_api.json
Src/ParcelLocker/qmls/: Result.qml  Welcome.qml  main.qml
Src/ParcelLocker/translations/: ParcelLocker_pt.qm  ParcelLocker_pt.ts  translation.qrc
Src/Test/: CMakeLists.txt  tst_doorControl.qml  tst_main.cpp  tst_mainController.qml
Src/ToolBox/: CMakeLists.txt
Src/ToolBox/src/: AppearanceManager.cpp  AppearanceManager.h  Button.qml  ColorizeImage.qml  ToolBox.qrc  qmldir
cmake/: Component.cmake  Project.cmake  Test.cmake  Utility.cmake
