cmake_minimum_required(VERSION 3.25 FATAL_ERROR)
project("Root")

set(PARAM_PROJECT_NAME "ParcelLockerSolution")
set(CMAKE_CXX_STANDARD "20")

set(CMAKE_TOOLCHAIN_FILE                    $ENV{CMAKE_TOOLCHAIN_FILE_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY          ${CMAKE_CURRENT_SOURCE_DIR}/Bin/${CMAKE_BUILD_TYPE})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY          ${CMAKE_CURRENT_SOURCE_DIR}/Bin/${CMAKE_BUILD_TYPE})
set(CMAKE_COMPILE_PDB_OUTPUT_DIRECTORY      ${CMAKE_CURRENT_SOURCE_DIR}/Bin/${CMAKE_BUILD_TYPE})

set(${PARAM_PROJECT_NAME}_ROOT_DIR              ${CMAKE_CURRENT_SOURCE_DIR})
set(${PARAM_PROJECT_NAME}_BIN_DIR               ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(${PARAM_PROJECT_NAME}_CMAKE_DIR		${CMAKE_CURRENT_SOURCE_DIR}/cmake)
set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}"    ${${PARAM_PROJECT_NAME}_CMAKE_DIR})

add_subdirectory(Src)
